<resources>
    <string name="app_name">StockWise</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home Fragment</string>
    <string name="hello_blank_fragment2">Portfolio Fragment</string>
    <string name="hello_blank_fragment3">News Fragment</string>
    <string name="hello_blank_fragment4">Settings Fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signuphere">Sign Up Here</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="email">E-mail</string>
    <string name="loginhere">Login Here</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="password2">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="one_year">One Year</string>
    <string name="six_months">Six Months</string>
    <string name="three_months">Three Months</string>
    <string name="my_portfolio">My Portfolio</string>
</resources>