<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/txtFullName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="16dp"
        android:fontFamily="@font/nunitosansregular"
        android:background="@drawable/rounded_search_view_transparent"
        android:gravity="center_vertical"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunitosansregular"
        android:background="@drawable/rounded_search_view_transparent"
        android:gravity="center_vertical"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullName"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunitosansregular"
        android:background="@drawable/rounded_search_view_transparent"
        android:gravity="center_vertical"
        android:text="Email"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunitosansregular"
        android:background="@drawable/rounded_search_view_transparent"
        android:gravity="center_vertical"
        android:text="@string/password2"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="174dp"
        android:layout_height="49dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/nunitosansregular"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/imgFullName"
        android:layout_width="42dp"
        android:layout_height="33dp"
        android:layout_marginTop="108dp"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUserName"
        android:layout_width="42dp"
        android:layout_height="33dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFullName" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="42dp"
        android:layout_height="33dp"
        android:layout_marginTop="58dp"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUserName" />

    <ImageView
        android:id="@+id/imgPassword"
        android:layout_width="42dp"
        android:layout_height="33dp"
        android:layout_marginTop="58dp"
        android:src="@drawable/baseline_mode_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmail"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>