<?xml version="1.0" encoding="utf-8"?>
<!-- Sample Layout, customize as needed -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtStockSymbolAnalysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunitosansregular"
        android:text="Stock Symbol"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtStockNameAnalysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/nunitosansregular"
        android:text="Stock Name"
        android:textColor="#000000"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtStockSymbolAnalysis"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtPrediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Computing Predictions, Please Stand By..."
        android:fontFamily="@font/nunitosansregular"
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStockNameAnalysis"
        app:layout_constraintStart_toStartOf="parent"/>

    <!--    <WebView-->
    <!--        android:id="@+id/webViewPlot"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="300dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/txtPrediction"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/btnBack"/>-->

    <ImageView
        android:id="@+id/imgPlot"
        android:layout_width="402dp"
        android:layout_height="473dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-20dp"
        android:layout_marginBottom="-50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrediction"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStockSymbolAnalysis"
        app:layout_constraintVertical_bias="0.974" />


    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="116dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108">

        <Button
            android:id="@+id/buttonOneYear"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/one_year"

            android:textSize="10dp" />

        <Button
            android:id="@+id/buttonSixMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/six_months"
            android:textSize="10dp" />

        <Button
            android:id="@+id/buttonThreeMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/three_months"
            android:textSize="10dp" />
    </LinearLayout>

    <!-- Add more views for your analysis -->

</androidx.constraintlayout.widget.ConstraintLayout>